2008-07-01  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (ICEDTEA_PATCHES, ICEDTEA_FSG_PATCHES): Move
	$(DISTRIBUTION_PATCHES) back to ICEDTEA_PATCHES as last item.
	* Makefile.in: Regenerate.

2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* HACKING:
	Fix typos.
	
2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* generated/com/sun/corbse/impl/logging/ActivationSystemException.java,
	* generated/com/sun/corbse/impl/logging/IORSystemException.java,
	* generated/com/sun/corbse/impl/logging/InterceptorsSystemException.java,
	* generated/com/sun/corbse/impl/logging/NamingSystemException.java,
	* generated/com/sun/corbse/impl/logging/OMGSystemException.java,
	* generated/com/sun/corbse/impl/logging/ORBUtilSystemException.java,
	* generated/com/sun/corbse/impl/logging/POASystemException.java,
	* generated/com/sun/corbse/impl/logging/UtilSystemException.java:
	New versions generated by the JScheme replacement (different headers).

2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Rename ports and ports-ecj
	aliases to hotspot-ports and hotspot-ports-ecj
	to prevent OpenJDK being extracted for make dist.

2008-06-30  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Make jtreg target work out of the source directory,
	and use a stamp to mark a finished icedtea build
	so we don't build it twice.
	* Makefile.in: Regenerated.

2008-06-29  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (stamps/icedtea-ecj.stamp): Add dependency on
	stamps/cacao.stamp.
	(stamps/cacao.stamp): Add dependency on stamps/rt-class-files.stamp.
	* Makefile.in: Regenerated.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Use build directory for
	generated directory, and copy there at
	the start if we are doing an out-of-directory
	build.
	* Makefile.in: Regenerated.

2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Add ICEDTEA_FSG_PATCHES
	to EXTRA_DIST.